fixed page alignment and margins.

--- a/ABDULLAHIADEBAYO_lab01/style.css
+++ b/ABDULLAHIADEBAYO_lab01/style.css
@@ -75,7 +75,8 @@ footer{
 
 }
 form{
-    margin-top: 21px;
+    margin-top: 20px;
+    margin-bottom: 20px
 }
 p{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
